examples/i18n/contents/error/404/nl.inc.php
<p>
Pagina niet gevonden!
</p>
